# _playing_around_with_bazel

./: BUILD.bazel  README.md  TODO.txt  WORKSPACE.bazel  concat.bzl  target_providers.cquery
app/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  concat.bzl  target_providers.cquery  the_concatenator.go
app/lib-a/: BUILD.bazel  foo.ts
app/lib-b/: BUILD.bazel
compiler/: BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  compiler.bzl  compiler.go  go.work
compiler/compiler/: BUILD.bazel  I_AM_DATA  compiler.go  go.mod  go.sum  implementation_test.go  implmentation.go
compiler/implementation/: go.mod  implmentation.go
lib-a/: BUILD.bazel
lib-b/: BUILD.bazel
workspace-1/: WORKSPACE.bazel
workspace-1/lib-b/: bar.ts
workspace-2/: WORKSPACE.bazel
