load("@rules_go//go:def.bzl", "go_binary")
load("//:concat.bzl", "concat")

go_binary(
    name = "the_concatenator",
    srcs = ["the_concatenator.go"],
    visibility = ["//visibility:public"],
)

concat(
    name = "bundle",
    srcs = [
        "//lib-a:bundle",
        "//lib-b:bundle",
    ],
    output = "bundle.js",
)
