load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# begin(hopefully this gets cleaned up by bzlmod ... these are the dependencies of the "compiler" repo/workspace)
http_archive(
    name = "io_bazel_rules_go",
    sha256 = "91585017debb61982f7054c9688857a2ad1fd823fc3f9cb05048b0025c47d023",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.42.0/rules_go-v0.42.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.42.0/rules_go-v0.42.0.zip",
    ],
)
load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.20.7")

# end

local_repository(
  name = "the-compiler",
  path = "../compiler/"
)

register_toolchains("@the-compiler//compiler:compiler_osx_toolchain")

