module(name = "the-compiler" )
bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "gazelle", version = "0.34.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//compiler:go.mod")

use_repo(go_deps, "com_github_fatih_color")
