load("//:concat.bzl", "concat")
load("@the-compiler//compiler:compiler.bzl", "compiler")

# compile the project using the compiler
compiler(
  name="build",
  srcs=glob(["**/*.ts"])
)

# concat the compiled files into a single bundle
concat(
  name="bundle",
  srcs=[":build"],
  output="bundle.js",
  visibility=["//visibility:public"]
)
